--- a/index.html
+++ b/index.html
@@ -6,46 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="./assets/css/style.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Forecast</title>
 </head>
 
 <body>
     <header class="header">
-      <h1 class="app-title"><i class="fas fa-cloud"></i> Weather Forecast</h1>
+        <h1 class="app-title"><i class="fas fa-cloud"></i> Weather Forecast</h1>
     </header>
 
-    <main>
-        <div class="col-3 col-md-3">
-            <div class="card">
-              <h2>Search for a City:</h2>
-              <form id="user-input" class="card-body">
-                <input name="cityname"type="text" aut ofocus="true" class="form-input"/>
-                <button type="submit" class="btn"><i class="fas fa-search"></i></button>
-              </form>
+    <main div="background">
+        <div class="container">
+            <div class="row developer">
+                <div class="col-3">
+                    <div class="card">
+                        <h2>Search for a City:</h2>
+                        <form id="user-input" class="card-body">
+                            <input name="cityname" type="text" aut ofocus="true" class="form-input" />
+                            <button type="submit" class="btn"><i class="fas fa-search"></i></button>
+                        </form>
+                    </div>
+                    <div>
+                        <div id="searched-cities"></div>
+                    </div>
+                </div>
+
+                <div class="col-9 developer">
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card">
+                                <div id="weather"></div>
+                                <h3 id="location"></h3>
+                                <div id="temp"></div>
+                                <div id="humidity"></div>
+                                <div id="wind"></div>
+                                <div id="uv-index"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 card developer">
+                                <h3 id="date-5"></h3>
+                                <div id="icon-5"></div>
+                                <div id="temp-5"></div>
+                                <div id="hum-5"></div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
-              <div id="searched-cities"></div>
-            </div>
-          </div>
-        
-        <div>
-        <div class="col-12 col-md-8 card">
-            <div id="weather"></div>
-            <div id="location"></div>
-            <h1 id="temp"></h1>
-            <div id="description"></div>
         </div>
-        <div id="5dayforecast">
-            <div id="location5day"></div>
-            <h1 id="temp5day"></h1>
-            <div id="description5day"></div>
-        </div> 
-        </div>      
-   
-</main>
+
+    </main>
     <script src="./assets/js/javascript.js"></script>
-    
+
 </body>
+
 </html>
