--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <h2>Search for a City:</h2>
                         <form id="user-input" class="card-body">
                             <input name="cityname" type="text" autofocus="true" class="form-input" />
-                            <button type="submit" class="btn"><i class="fas fa-search"></i></button>
+                            <button type="submit" id="btn"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
                     <div>
