--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="card-search">
                         <h2>Search for a City:</h2>
                         <form id="user-input" class="card-body">
-                            <input name="cityname" type="text" autofocus="true" class="form-input" />
+                            <input name="cityname" type="text" autofocus="true" id="form-input" />
                             <button type="submit" id="btn"><i class="fas fa-search"></i></button>
                         </form>
                     </div>
